--- a/animations.html
+++ b/animations.html
@@ -42,7 +42,6 @@
         img{
             animation: widthAnimate2 0.5s ease-in-out 0.5s infinite alternate;
         }
-
         @keyframes widthAnimate {
             from{
                 width: 30px;
@@ -74,6 +73,10 @@
     <div class="container">
         <!-- <div class="box">
         </div> -->
+        <audio controls autoplay>
+            <source src="dragon-howling-roar.mp3" type="audio/mpeg"/>
+            Your browser does not support audio.
+        </audio>
         <img src="dragon.png" alt="404 Error" width="344px">
     </div>
 </body>
